# finance-tracker

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  conanfile.txt
cmake/: compile_options.cmake  format.cmake  linters.cmake  package.cmake
src/: CMakeLists.txt
src/finance_tracker/: CMakeLists.txt  main.cpp
src/finance_tracker/concepts/: canonical.hpp  config.hpp  traits.hpp  utility.hpp
src/finance_tracker/logging/: CMakeLists.txt  config.hpp  log.cpp  log.hpp
src/finance_tracker/logging/detail/: spdlog_impl.hpp
src/finance_tracker/messages/canonical/: common.hpp  daily_item.hpp
src/finance_tracker/reflection/: descriptor.hpp  enum.hpp
src/finance_tracker/utils/: hardware.hpp  macros.hpp  static_string.hpp  static_vector.hpp  tuple_utility.hpp  type_traits.hpp  utility.hpp
src/finance_tracker/utils/unique/: id.hpp
src/finance_tracker/yaml/: serializer.hpp
src/finance_tracker/yaml/detail/: converter.hpp
tests/: CMakeLists.txt
tests/finance_tracker/: CMakeLists.txt
tests/finance_tracker/reflection/: CMakeLists.txt  test_reflections.cpp
tests/finance_tracker/utils/: CMakeLists.txt  test_static_string.cpp  test_static_vector.cpp  test_type_traits.cpp
tests/finance_tracker/yaml/: CMakeLists.txt  test_yaml.cpp
